Callback to native executable from HotSpot JVM