@@ -4,10 +4,16 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
 import java.io.File;
-import java.nio.file.Files;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.Random;
 import org.enso.os.environment.jni.JNI.JValue;
+import org.graalvm.nativeimage.CurrentIsolate;
+import org.graalvm.nativeimage.IsolateThread;
 import org.graalvm.nativeimage.StackValue;
+import org.graalvm.nativeimage.c.function.CEntryPoint;
+import org.graalvm.nativeimage.c.function.CEntryPointLiteral;
+import org.graalvm.nativeimage.c.function.CFunctionPointer;
 import org.graalvm.nativeimage.c.type.CTypeConversion;
 import org.junit.Test;
 
@@ -27,6 +33,7 @@ public class LoadClassTest {
           JVM.create(
               path,
               "--module-path=" + MODULE_PATH,
+              "--enable-native-access=org.enso.os.environment",
               "-Djdk.module.main=org.enso.os.environment",
               "-Dsay=Ahoj");
     }
@@ -108,14 +115,32 @@ public class LoadClassTest {
 
   @Test
   public void executeMainClass() throws Exception {
-    var out = File.createTempFile("check-main", ".log");
+    var callbackFn = CALLBACK_FN.getFunctionPointer().rawValue();
+    var jvmIsolate = CurrentIsolate.getCurrentThread().rawValue();
     var gen = new Random();
     for (var i = 0; i < 5; i++) {
-      var n = gen.nextInt(10000, 20000);
-      jvm().executeMain("org/enso/os/environment/jni/TestMain", out.getPath(), "" + n);
-      var content = Files.readString(out.toPath());
-      assertEquals("Factorial of " + n + " is the same", TestMain.factorial(n).toString(), content);
-      out.delete();
+      var n = gen.nextLong(1, 15);
+      jvm()
+          .executeMain(
+              "org/enso/os/environment/jni/TestMain", "" + jvmIsolate, "" + callbackFn, "" + n);
+      long content = COLLECTED_RESULTS.get(n);
+      assertEquals(
+          "Factorial of " + n + " is the same", TestMain.factorial(n).longValue(), content);
     }
   }
+
+  private static final Map<Long, Long> COLLECTED_RESULTS = new HashMap<>();
+
+  @CEntryPoint
+  private static void acceptResultFromHotSpotJvm(IsolateThread threadId, long key, long value) {
+    COLLECTED_RESULTS.put(key, value);
+  }
+
+  private static final CEntryPointLiteral<CFunctionPointer> CALLBACK_FN =
+      CEntryPointLiteral.create(
+          LoadClassTest.class,
+          "acceptResultFromHotSpotJvm",
+          IsolateThread.class,
+          long.class,
+          long.class);
 }
